@@ -765,20 +765,14 @@ context information, tags, or spans.
 
 [float]
 [[config-use-experimental-sql-parser]]
-==== `use_experimental_sql_parser`
+==== `use_legacy_sql_parser`
 |============
-| Environment                               | `Config` key                  | Default
-| `ELASTIC_APM_USE_EXPERIMENTAL_SQL_PARSER` | `use_experimental_sql_parser` | `false`
+| Environment                         | `Config` key            | Default
+| `ELASTIC_APM_USE_LEGACY_SQL_PARSER` | `use_legacy_sql_parser` | `false`
 |============
 
-Use a newer, more precise but still experimental approach to generating summaries of
-your app's SQL statements.
-Without this, your SQL statements will still be summarized albeit less accurately.
-
-The summaries become the spans' names -- what it says in the waterfall view in Kibana.
-
-NOTE: This should work just fine but is still deamed experimental. That means it is
-subject to change. Please let us know if you come across any issues.
+Use the older, less precise approach to generating summaries of your app's SQL statements.
+Try this if you're experiencing trouble using the new default.
 
 [float]
 [[config-verify-server-cert]]
